:bug: fix controller z-index

--- a/css/application.css
+++ b/css/application.css
@@ -112,4 +112,5 @@
   top: 60px;
   right: 10px;
   margin: 10px;
+  z-index: 2;
 }
